css/styles.css
/* ... */
body.dark .footer-link a,
body.dark .footer-link a:hover,
body.dark .footer-link a:visited {
  color: hsla(0, 0%, 100%, .5);
  text-decoration: none;
}

body.dark .footer-link a:hover {
  background-color: transparent;
  color: hsla(0, 0%, 100%, .9);
}

body.dark cite {
  color: #BDBDBD;
}

body.dark img {
  filter: brightness(.8) contrast(1.2);
}

body.dark td,
body.dark th {
  border: 1px solid #121212;
  color: #FEFEFE;
}

body.dark .toggle-callout {
  background-color: #23242C;
}

body.dark tr:nth-child(even) {
  background-color: #212121;
}

body.dark .blog-callout {
  color: #FEFEFE;
  background-color: #28252B;
  border: 1px solid #121212;
}

body.dark .code {
  color: #B885F9;
  background-color: #28252B;
  border: 1px solid #121212;
}

body.dark .bg-stripe {
  background-color: #383838;
  padding: 4px 8px;
}

body.dark .dropdown-nav button {
  background-color: #21262D;
  border: 1px solid #363B42;
}

body.dark .dropdown-nav button:hover {
  background-color: #282E35;
  border: 1px solid #8B949E;
}

body.dark .bar {
  background-color: #fefefe;
}

body.dark .horizontal-nav.active a:hover {
  background-color: #E0D8FF;
  color: #48118F;
}

body.dark .horizontal-nav.active a:hover.placeholder {
  background-color: transparent;
  color: #60A1EE;
}

body.dark .horizontal-nav.active a:hover.closeout {
  background-color: transparent;
  color: #FEFEFE;
  text-decoration: underline;
}

